--- a/shell/public/index.html
+++ b/shell/public/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
-  <head> </head>
+  <head>
+    <script src="http://localhost:3001/remoteEntry.js"></script>
+    <script src="http://localhost:3002/remoteEntry.js"></script>
+    <script src="http://localhost:3003/remoteEntry.js"></script>
+     </head>
 
   <body>
     <div id="root"></div>
